User can save courses to his profile. Text file is read when DisplayUserProfile.java activity is started. User can't remove courses from profile. Added classes user and session that don't do anything.

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -36,6 +36,10 @@
             android:name="com.mainapp.mynoppaapp.DisplayCourseActivities"
             android:label="@string/title_activity_display_course_activities" >
         </activity>
+        <activity
+            android:name="com.mainapp.mynoppaapp.DisplayUserProfile"
+            android:label="@string/title_activity_user_profile" >
+        </activity>
     </application>
 
 </manifest>
