--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -14,7 +14,8 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme" 
+        android:name="Session" >
         <activity
             android:name="com.mainapp.mynoppaapp.MainActivity"
             android:label="@string/app_name" >
@@ -29,7 +30,7 @@
             android:label="@string/title_activity_display_search_results" >
         </activity>
         <activity
-            android:name="com.mainapp.mynoppaapp.DisplayCourseDetails"
+            android:name="com.mainapp.mynoppaapp.DisplayCourseDetailsActivity"
             android:label="@string/title_activity_display_course_details" >
         </activity>
         <activity
@@ -37,7 +38,7 @@
             android:label="@string/title_activity_display_course_activities" >
         </activity>
         <activity
-            android:name="com.mainapp.mynoppaapp.DisplayUserProfile"
+            android:name="com.mainapp.mynoppaapp.DisplayUserProfileActivity"
             android:label="@string/title_activity_user_profile" >
         </activity>
     </application>
